reconfigured angular.json file for GitHub Pages CI/CD

--- a/angular.json
+++ b/angular.json
@@ -55,6 +55,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "/prj-portfolio/",
               "budgets": [
                 {
                   "type": "initial",
