Added basic navbar elements

--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,8 @@
                 "src/styles"
               ]
             },            
-            "scripts": [],
+            "scripts": [
+            ],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
