--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,12 +11,14 @@
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
     "isolatedModules": true,
+    "resolveJsonModule": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
-    "module": "ES2022"
+    "module": "ES2022",
+     
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
