--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -155,7 +155,7 @@
       "Angular 16+",
       "RESTful APIs",
       "Unit Tests",
-      "SEO (OG)",
+      "SEO & PO",
       "GitHub and Git"
     ],
     "features": [
