--- a/angular.json
+++ b/angular.json
@@ -62,7 +62,7 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "600kB",
+                  "maximumWarning": "1MB",
                   "maximumError": "1MB"
                 },
                 {
