--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -149,7 +149,7 @@
     "heading": "EHS Business Website",
     "imageName": "prj-mbg",
     "introduction": "EHS company website developed using Angular framework.",
-    "description": "<i class='bi bi-stop-fill'></i> Designed responsive UI using <span class=\"highlighted-text\">HTML5</span>, <span class=\"highlighted-text\">SCSS</span>. <i class='bi bi-stop-fill'></i> Implemented <span class=\"highlighted-text\">Lazy loading</span> to optimize performance. <i class='bi bi-stop-fill'></i> Integrated weather RESTful API using <span class=\"highlighted-text\">RxJS</span>. <i class='bi bi-stop-fill'></i> Build validated contact form using <span class=\"highlighted-text\">Reactive Forms</span>. <i class='bi bi-stop-fill'></i>  Enhance <span class=\"highlighted-text\">SEO</span> by using SSR, Open Graph, Meta, & Title interface.  <i class='bi bi-stop-fill'></i> Wrote unit tests for critical components using <span class=\"highlighted-text\">Jasmine & Karma</span>.",
+    "description": "<i class='bi bi-stop-fill'></i> Designed responsive UI using <span class=\"highlighted-text\">HTML5</span>, <span class=\"highlighted-text\">SCSS</span>. <i class='bi bi-stop-fill'></i> Implemented <span class=\"highlighted-text\">Lazy loading</span> to optimize performance. <i class='bi bi-stop-fill'></i> Integrated weather RESTful API using <span class=\"highlighted-text\">RxJS</span>. <i class='bi bi-stop-fill'></i> Build validated contact form using <span class=\"highlighted-text\">Reactive Forms</span>. <i class='bi bi-stop-fill'></i>  Enhance <span class=\"highlighted-text\">SEO</span> by using SSR, Open Graph, Meta, & Title interface.",
     "concepts": [
       "Responsive UI",
       "Angular ",
